--- a/css/effect.css
+++ b/css/effect.css
@@ -4,11 +4,20 @@
     letter-spacing: 1px;
     font-family: "Raleway";
     font-weight: 800;
-    font-size: 14px; 
+    font-size: 15px; 
     padding-right: 0px;
     text-decoration: none;  
 }
 
 .menu-item a:hover{
     color: #ababab;
+}
+
+.logo{
+    float: left;
+}
+
+.logo img{
+    width: 50px;
+    height: 50px;
 }
